[gd_scene load_steps=9 format=3 uid="uid://em2tk6h0hkuy"]

[ext_resource type="Script" uid="uid://5rkuyyfevwen" path="res://scripts/common/fim.gd" id="1_ymhvj"]
[ext_resource type="Texture2D" uid="uid://datf8wc0okvpi" path="res://assets/netuno/fim.png" id="2_ttp0h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fak4q"]
atlas = ExtResource("2_ttp0h")
region = Rect2(70, 0, 70, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bea8"]
atlas = ExtResource("2_ttp0h")
region = Rect2(140, 0, 70, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifejo"]
atlas = ExtResource("2_ttp0h")
region = Rect2(210, 0, 70, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkklx"]
atlas = ExtResource("2_ttp0h")
region = Rect2(280, 0, 70, 167)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvuaw"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_fak4q")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_5bea8")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_ifejo")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_nkklx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvuaw"]
radius = 23.323807

[node name="fim" type="Area2D"]
collision_layer = 64
script = ExtResource("1_ymhvj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qvuaw")
autoplay = "default"
frame_progress = 0.7988493

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_qvuaw")
debug_color = Color(0, 0.63892627, 0.37629008, 0.41960785)

[node name="qty_elements_label" type="Label" parent="."]
offset_left = -24.0
offset_top = -55.0
offset_right = 6.0
offset_bottom = -32.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "20/"

[node name="qty_min_elements" type="Label" parent="."]
offset_left = 1.0
offset_top = -55.0
offset_right = 44.0
offset_bottom = -32.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_constants/outline_size = 3
text = "30"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
